--- a/front/sass/style.scss
+++ b/front/sass/style.scss
@@ -4,3 +4,4 @@ html, body {
 
 @import "variables.scss";
 @import "~bootstrap/scss/bootstrap.scss";
+@import "../node_modules/element-ui/lib/theme-default/index.css"
