--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -8,6 +8,8 @@
     @if(env.isProd) {
         <link rel="stylesheet" href="/assets/bundle/@cssBundle">
     }
+    <link rel="icon" type="image/png" sizes="32x32" href="/assets/images/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/assets/images/favicon-16x16.png">
 </head>
 <body>
     <div id="app"></div>
