--- a/front/sass/style.scss
+++ b/front/sass/style.scss
@@ -2,7 +2,10 @@
 @import "~bootstrap/scss/bootstrap.scss";
 
 body {
-  margin: 40px;
+  margin-top: 120px;
+  margin-left: 10px;
+  margin-right: 10px;
+  background: #fff url(~/assets/images/wall-bg.jpg) no-repeat center -28px fixed;
 }
 
 @import "../node_modules/element-ui/lib/theme-default/index.css"
