--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -4,7 +4,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Frontend</title>
+    <title>Elle & Felix Wedding Site</title>
     @if(env.isProd) {
         <link rel="stylesheet" href="/assets/bundle/@cssBundle">
     }
